force-app/main/default/objects/Product_Interest__c/Product_Interest__c.object-meta.xml
<CustomObject>
    <label>Recommended Product</label>
    <nameField>
        <displayFormat>PI-{000000}</displayFormat>
        <label>Product Interest No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recommended Products</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>