force-app/main/default/objects/Product_Interest__c/fields/COM_Offer_Result__c.field-meta.xml
<CustomField>
    <fullName>COM_Offer_Result__c</fullName>
    <label>Offer Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interested</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Not Qualified</fullName>
            </value>
            <value>
                <fullName>Not Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>