force-app/main/default/objects/Product_Interest__c/fields/COM_Other_Reason__c.field-meta.xml
<CustomField>
    <fullName>COM_Other_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Reason</label>
    <length>50</length>
    <type>Text</type>
</CustomField>