force-app/main/default/objects/Product_Interest__c/fields/COM_Sub_Unqualified_Reason__c.field-meta.xml
<CustomField>
    <fullName>COM_Sub_Unqualified_Reason__c</fullName>
    <label>Sub Unqualified Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ผู้รับสายไม่ใช่ลูกค้า, หมายเลขโทรศัพท์ผิด</fullName>
            </value>
            <value>
                <fullName>ไม่มีผู้รับสาย, สายไม่ว่าง, เบอร์โทรสาร, เครื่องตอบรับอัตโนมัติ, ลูกค้าตัดสาย</fullName>
            </value>
            <value>
                <fullName>ติดต่อแล้ว 3ครั้งและไม่ได้รับโอกาศพูดคุย</fullName>
            </value>
            <value>
                <fullName>ไม่พบหมายเลขโทรศัพท์เพื่อติดต่อใน Lead (สำหรับ RMC เท่านั้น)</fullName>
            </value>
            <value>
                <fullName>ลูกค้าเดินบัญชี/ใช้วงเงินกับธนาคารอื่น เป็นขาจ่าย เป็นหลัก</fullName>
            </value>
            <value>
                <fullName>ลูกค้าเดินบัญชี/ใช้วงเงินกับธนาคารอื่น เป็นขารับ เป็นหลัก</fullName>
            </value>
            <value>
                <fullName>ดอกเบี้ยถูกกว่า</fullName>
            </value>
            <value>
                <fullName>ไม่ต้องการเสียค่าใช้จ่ายในการ Refinance</fullName>
            </value>
            <value>
                <fullName>ttb - ไม่มั่นใจในองค์กร</fullName>
            </value>
            <value>
                <fullName>กระบวนการ -ขั้นตอนการสมัครและการอนุมัติยุ่งยาก</fullName>
            </value>
            <value>
                <fullName>การตลาด-คู่แข่งให้ข้อเสนอที่ดีกว่า</fullName>
            </value>
            <value>
                <fullName>ใช้บริการที่อื่นเรียบร้อยแล้ว</fullName>
            </value>
            <value>
                <fullName>การตลาด-โปรโมชั่นไม่น่าสนใจ</fullName>
            </value>
            <value>
                <fullName>ช่องทาง-ไม่สะดวกในการใช้งาน/รับบริการ</fullName>
            </value>
            <value>
                <fullName>ผลิตภัณฑ์ - ค่าธรรมเนียมแพง</fullName>
            </value>
            <value>
                <fullName>ผลิตภัณฑ์ - วงเงินน้อย/ไม่เพียงพอ</fullName>
            </value>
            <value>
                <fullName>ผลิตภัณฑ์ - อัตราดอกเบี้ยแพง</fullName>
            </value>
            <value>
                <fullName>ปริมาณธุรกรรมทางการเงินมีจำนวนน้อย</fullName>
            </value>
            <value>
                <fullName>วงเงินที่นำเสนอไม่ตรงกับความต้องการของลูกค้า</fullName>
            </value>
            <value>
                <fullName>ผลิตภัณฑ์ที่นำเสนอไม่ตรงกับความต้องการของลูกค้า</fullName>
            </value>
            <value>
                <fullName>ลูกค้าไม่สะดวกในการใช้บริการ ttb</fullName>
            </value>
            <value>
                <fullName>FRAUD, CSI - ผู้เกี่ยวข้อง</fullName>
            </value>
            <value>
                <fullName>NCB - ผู้กู้</fullName>
            </value>
            <value>
                <fullName>NCB - ผู้เกี่ยวข้อง</fullName>
            </value>
            <value>
                <fullName>TDR/NPL  - ผู้กู้</fullName>
            </value>
            <value>
                <fullName>TDR/NPL - ผู้เกี่ยวข้อง</fullName>
            </value>
            <value>
                <fullName>ประสบการณ์ธุรกิจไม่เป็นไปตามเกณฑ์ (Year in Business)</fullName>
            </value>
            <value>
                <fullName>ปัจจุบันผู้กู้ดำเนินธุรกิจที่ไม่ผ่านเกณฑ์ Industry</fullName>
            </value>
            <value>
                <fullName>ผู้กู้มีผู้เกี่ยวข้องหรือบริษัท ซึ่งดำเนินธุรกิจที่ไม่ผ่านเกณฑ์ Industry</fullName>
            </value>
            <value>
                <fullName>ยอดขายรวมเกินเกณฑ์ Segment SE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>