force-app/main/default/objects/Product_Interest__c/fields/COM_Unqualified_Reason__c.field-meta.xml
<CustomField>
    <fullName>COM_Unqualified_Reason__c</fullName>
    <label>Unqualified Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ติดต่อลูกค้าไม่ได้</fullName>
            </value>
            <value>
                <fullName>Competitor (ธนาคารคู่แข่ง)</fullName>
            </value>
            <value>
                <fullName>การตลาด</fullName>
            </value>
            <value>
                <fullName>ช่องทาง</fullName>
            </value>
            <value>
                <fullName>ผลิตภัณฑ์</fullName>
            </value>
            <value>
                <fullName>ไม่ผ่านเกณฑ์พิจารณาสินเชื่อ</fullName>
            </value>
            <value>
                <fullName>ลูกค้าไม่มีความต้องการ</fullName>
            </value>
            <value>
                <fullName>Do Not Contact</fullName>
            </value>
            <value>
                <fullName>reason1</fullName>
                <isActive>false</isActive>
                <label>reason1</label>
            </value>
            <value>
                <fullName>reason2</fullName>
                <isActive>false</isActive>
                <label>reason2</label>
            </value>
            <value>
                <fullName>reason3</fullName>
                <isActive>false</isActive>
                <label>reason3</label>
            </value>
            <value>
                <fullName>reason4</fullName>
                <isActive>false</isActive>
                <label>reason4</label>
            </value>
            <value>
                <fullName>reason5</fullName>
                <isActive>false</isActive>
                <label>reason5</label>
            </value>
            <value>
                <fullName>reason6</fullName>
                <isActive>false</isActive>
                <label>reason6</label>
            </value>
            <value>
                <fullName>reason7</fullName>
                <isActive>false</isActive>
                <label>reason7</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>