force-app/main/default/objects/Product_Interest__c/fields/Fee__c.field-meta.xml
<CustomField>
    <fullName>Fee__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fee</label>
    <length>20</length>
    <type>Text</type>
</CustomField>