force-app/main/default/objects/Product_Interest__c/fields/Host_Product_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Host_Product_Mapping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Host Product Mapping</label>
    <referenceTo>Host_Product_Mapping__c</referenceTo>
    <relationshipLabel>Recommended Products</relationshipLabel>
    <relationshipName>Recommended_Products</relationshipName>
    <type>Lookup</type>
</CustomField>