force-app/main/default/objects/Product_Interest__c/fields/Max_Installment__c.field-meta.xml
<CustomField>
    <fullName>Max_Installment__c</fullName>
    <label>Max Installment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>