force-app/main/default/objects/Product_Interest__c/fields/Max_Offer_Amount__c.field-meta.xml
<CustomField>
    <fullName>Max_Offer_Amount__c</fullName>
    <label>Max Offer Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>