force-app/main/default/objects/Product_Interest__c/fields/Max_Tenor__c.field-meta.xml
<CustomField>
    <fullName>Max_Tenor__c</fullName>
    <label>Max Tenor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>