force-app/main/default/objects/Product_Interest__c/fields/Max_Tenor_Unit__c.field-meta.xml
<CustomField>
    <fullName>Max_Tenor_Unit__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Max Tenor Unit</label>
    <length>20</length>
    <type>Text</type>
</CustomField>