force-app/main/default/objects/Product_Interest__c/fields/Merchant_Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Unique_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Merchant Unique ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>