force-app/main/default/objects/Product_Interest__c/fields/MIG_Product_line_SRC__c.field-meta.xml
<CustomField>
    <fullName>MIG_Product_line_SRC__c</fullName>
    <description>Temporary use for r8 migration</description>
    <encryptionScheme>None</encryptionScheme>
    <label>MIG_Product_line_SRC</label>
    <length>20</length>
    <type>Text</type>
</CustomField>