force-app/main/default/objects/Product_Interest__c/fields/Offer_end_date__c.field-meta.xml
<CustomField>
    <fullName>Offer_end_date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Offer end date</label>
    <type>Date</type>
</CustomField>