force-app/main/default/objects/Product_Interest__c/fields/Offer_Last_update_date__c.field-meta.xml
<CustomField>
    <fullName>Offer_Last_update_date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Offer Last update date</label>
    <type>DateTime</type>
</CustomField>