force-app/main/default/objects/Product_Interest__c/fields/Offer_start_date__c.field-meta.xml
<CustomField>
    <fullName>Offer_start_date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Offer start date</label>
    <type>Date</type>
</CustomField>