force-app/main/default/objects/Product_Interest__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Link to Opportunity</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Analysis, Develop &amp; Propose Solution, Follow Up</value>
        </filterItems>
        <filterItems>
            <field>Opportunity.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Related_Account__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Recommended Products</relationshipLabel>
    <relationshipName>Product_Interest</relationshipName>
    <type>Lookup</type>
</CustomField>