force-app/main/default/objects/Product_Interest__c/fields/Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Group__c</fullName>
    <formula>Text(Host_Product_Mapping__r.Host_Product_Group__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Group</label>
    <type>Text</type>
</CustomField>