force-app/main/default/objects/Product_Interest__c/fields/Product_Program__c.field-meta.xml
<CustomField>
    <fullName>Product_Program__c</fullName>
    <formula>Text(Host_Product_Mapping__r.Product_Program__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Program</label>
    <type>Text</type>
</CustomField>