force-app/main/default/objects/Product_Interest__c/fields/Project_Code__c.field-meta.xml
<CustomField>
    <fullName>Project_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Project Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>