force-app/main/default/objects/Product_Interest__c/fields/Rate__c.field-meta.xml
<CustomField>
    <fullName>Rate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rate</label>
    <length>50</length>
    <type>Text</type>
</CustomField>