force-app/main/default/objects/Product_Interest__c/fields/Related_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Recommended Products</relationshipLabel>
    <relationshipName>Recommended_Products</relationshipName>
    <type>Lookup</type>
</CustomField>