force-app/main/default/objects/Product_Interest__c/fields/Request_Fee_Baht__c.field-meta.xml
<CustomField>
    <fullName>Request_Fee_Baht__c</fullName>
    <label>Request Fee (Baht)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>